--- a/manifest.json
+++ b/manifest.json
@@ -3,29 +3,17 @@
     "version": "0.1",
     "name": "Pinterest arrow navigation",
     "permissions": [],
+    "host_permissions": [
+        "https://*.pinterest.com/*"
+    ],
     "content_scripts": [
         {
             "matches": [
                 "https://*.pinterest.com/*"
             ],
-            "exclude_matches": [
-                "https://*.pinterest.com/pin/"
-            ],
             "js": [
                 "pins.js"
             ]
-        },
-        {
-            "matches": [
-                "https://*.pinterest.com/pin/*"
-            ],
-            "js": [
-                "index.js"
-            ]
         }
-    ],
-    "action": {
-        "default_popup": "index.html",
-        "default_icon": "images/icon.png"
-    }
+    ]
 }
